<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_180sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:strokeColor="@color/main_color"
        app:strokeWidth="@dimen/_2sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        app:cardElevation="@dimen/_5sdp"
        android:backgroundTint="@color/white"
        app:contentPadding="@dimen/_10sdp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            >
            
            <ImageView
                android:id="@+id/item_imageview"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="fitCenter"
                />

            <TextView
                android:id="@+id/tv_item_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/top"
                android:textColor="@color/main_color"
                android:textStyle="bold"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_item_book_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_imageview"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/book_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_item_price_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_book_name"
                android:layout_marginTop="@dimen/_4sdp"
                android:text="@string/price"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/black"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>